[package]
name = "tuitch"
version = "0.1.0"
authors = ["Brandon Phillips <brandont.dev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "3.0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tui = "0.16"
termion = "1.5"
